--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -63,9 +63,9 @@
 				{% for exhibition in exhibitions %}
 					<h3><a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
 					<ul class="[ p-0 ]">
-						<li>Exhibition Dates: {{ exhibition.start_date|date_format }} to {{ exhibition.end_date }}</li>
-						<li>Install Date(s): {{ exhibition.install_start }}{%if exhibition.install_end %} to {{ exhibition.install_end }}{% endif %}</li>
-						<li>De-Install Due Date: {{ exhibition.deinstall_date }}</li>
+						<li>Exhibition Dates: {{ exhibition.start_date|date_format }} to {{ exhibition.end_date|date_format }}</li>
+						<li>Install Date(s): {{ exhibition.install_start|date_format }}{%if exhibition.install_end %} to {{ exhibition.install_end|date_format }}{% endif %}</li>
+						<li>De-Install Due Date: {{ exhibition.deinstall_date|date_format }}</li>
 					</ul>
 				{% else %}
 					<p><i>There are no exhibitions in the database yet.</i></p>
