--- a/app/static/css/module-buttons.css
+++ b/app/static/css/module-buttons.css
@@ -25,6 +25,8 @@ add				- blue
 	border-radius: 4px;
 	background-color: #fff;
 	color: #58595b;
+	font-size: 1.25rem;
+	padding: .25rem 1rem;
 }
 
 	.butt a {
