--- a/app/templates/parks.html
+++ b/app/templates/parks.html
@@ -2,33 +2,43 @@
 {% block title %}NYC Parks Database – Parks{% endblock %}
 {% block content %}
 
-	<div class="container-fluid">
-		<section id="section--head">
-			{% include "include/nav.html" %}
-			<div class="head [ row justify-content-center align-items-center ]">
-				<div class="col-sm-12 col-md-8">	
-					<h1 class="text-center display-3"><b>PARKS</b></h1>
-				</div>
+
+<div class="container-fluid">
+
+	<section id="section--head">
+		{% include "include/nav.html" %}
+		<div class="head [ row justify-content-center align-items-center ]">
+			<div class="[ col-md-8 ]">	
+				<h1 class="[ text-center display-3 ]"><b>PARKS</b></h1>
 			</div>
-		</section>
-		<section id="section--parks">
-			<div class="row justify-content-center">
-				<div class="col-sm-12 col-md-8">	
-					{% if parks %}
-						{% for p in parks %}
-							<h2 class="text-center display-4 p-4"><a href="{{ url_for('park', park_id=p.id) }}">{{ p.name }}</a></h2>
-							<ul>
-								<li>ID: {{ p.id }}</li>
-								<li>Park ID: {{ p.park_id }}</li>
-								<li>Address: {{ p.address }}</li>
-								<li>Community Board: {{ p.cb }}</li>
-							</ul>
-						{% endfor %}
-					{% else %}
-						<p><i>There are no parks in the database.</i></p>
-					{% endif %}
-				</div>
+		</div>
+	</section>
+
+
+
+	<section id="section--parks">
+		<div class="[ row justify-content-center py-5 ]">
+			<div class="[ col-md-8 ]">
+
+				{% for park in parks %}
+
+					<h2 class="[ pt-3 ]"><a href="{{ url_for('park', park_id=park.id) }}">{{ park.name }}</a></h2>
+					<ul class="[ list-unstyled p-0 ]">
+						<li>Park ID: {{ park.park_id }}</li>
+						<li>Address: {{ park.address }}</li>
+						<li>Community Board: {{ park.cb }}</li>
+					</ul>
+
+				{% else %}
+
+					<p><i>There are no parks in the database.</i></p>
+
+				{% endfor %}
+
 			</div>
-		</section>
+		</div>
+	</section>
+
+</div>
 
 {% endblock %}
