--- a/app/templates/org_delete.html
+++ b/app/templates/org_delete.html
@@ -24,7 +24,7 @@
 		<section id="section--submit">
 			<div class="[ row justify-content-center ]">
 				<div class="[ col-sm-12 col-md-10 text-right p-4 ]">
-					<a href="{{ url_for('org', org_id=org.id) }}" role="button" class="butt butt--edit [ btn btn-sm ]">Cancel</a>
+					<a href="{{ url_for('org', organization_id=org.id) }}" role="button" class="butt butt--edit [ btn btn-sm ]">Cancel</a>
 					<input type="submit" class="butt butt--delete [ ml-2 btn btn-sm ]" value="Delete">
 				</div>
 			</div>
