--- a/app/templates/park_delete.html
+++ b/app/templates/park_delete.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
 {% block head_extras %}
+<meta name="csrf-token" content="{{ csrf_token }}">
 {% endblock %}
-{% block title %}Parks Database – Delete {{ org.name|capitalize }}{% endblock %}
+{% block title %}Parks Database – Delete {{ park.name|capitalize }}{% endblock %}
 {% block content %}
 
 <div class="container-fluid">
@@ -9,8 +10,8 @@
 	<section id="section--head">
 		{% include "include/nav.html" %}
 		<div class="head [ row justify-content-center align-items-center ]">
-			<div class="[ col-sm-12 col-md-8 ]">
-				<h1 class="[ text-center display-3 ]"><b>{{ org.name|upper }}</b></h1>
+			<div class="[ col-md-8 ]">
+				<h1 class="[ text-center display-3 ]"><b>{{ park.name|upper }}</b></h1>
 			</div>
 		</div>
 	</section>
@@ -18,14 +19,15 @@
 	<form action="" id="" method="post">
 
 		<div class="[ row justify-content-center py-4 ]">
-			<p>Are you sure you want to delete <b>{{ org.name }}</b> from the database?</p>
+			<p>Are you sure you want to delete <b>{{ park.name }}</b> from the database?</p>
 		</div>
 
 		<section id="section--submit">
 			<div class="[ row justify-content-center ]">
-				<div class="[ col-sm-12 col-md-10 text-right p-4 ]">
-					<a href="{{ url_for('org', org_id=org.id) }}" role="button" class="butt butt--edit [ btn btn-sm ]">Cancel</a>
-					<input type="submit" class="butt butt--delete [ ml-2 btn btn-sm ]" value="Delete">
+				<div class="[ col-md-8 text-right p-4 ]">
+					<a id="js-cancel_park" class="js-cancel-form butt butt--edit [ btn btn-sm ]" href="{{ url_for('park', park_id=park.id) }}" role="button">Cancel</a>
+					<!-- <input id="js-delete_park" type="submit" class="butt butt--delete [ ml-2 btn btn-sm ]" value="Delete"> -->
+					<button id="js-delete_park" class="butt butt--delete js-delete-form [ ml-2 ]" type="button">Delete</button>
 				</div>
 			</div>
 		</section>
