--- a/app/templates/park.html
+++ b/app/templates/park.html
@@ -12,7 +12,7 @@
 	<section id="section--head">
 		{% include "include/nav.html" %}
 		<div class="head [ row justify-content-center align-items-center ]">
-			<div class="[ col-sm-12 col-md-8 ]">
+			<div class="[ col-md-8 ]">
 				<h1 class="[ text-center display-3 ]"><b>{{ park.name|upper }}</b></h1>
 			</div>
 		</div>
@@ -25,7 +25,7 @@
 		{{ form.csrf_token }}
 
 		<div class="[ row justify-content-center ]">
-			<div class="[ col-sm-12 col-md-8 text-right pt-5 pb-4 ]">
+			<div class="[ col-md-8 text-right pt-5 pb-4 ]">
 				<button id="js-edit_park" class="js-form-edit butt butt--edit" type="button">Edit</button>
 				<a href="{{ url_for('park_delete', park_id=park.id) }}" class="butt butt--delete [ btn btn-sm ]" role="button">Delete</a>
 			</div>
@@ -34,7 +34,7 @@
 
 		<section id="section--bio">
 			<div class="[ row justify-content-center ]">
-				<div class="[ col-sm-12 col-md-8 ]">
+				<div class="[ col-md-8 ]">
 					<h2 class="[ display-4 py-4 ]">Bio</h2>
 
 					<ul class="js-ul_park [ p-0 ]">
@@ -63,7 +63,7 @@
 							</div>
 							<div class="[ col-md-6 ]">
 								<p class="is-active [ m-0 ]">{{ park.borough }}</p>
-								{{ form.borough(class="form-control-plaintext d-none", value=park.borough, readonly=true) }}
+								{{ form.borough(class="form-control-plaintext d-none", readonly=true) }}
 							</div>
 						</li>
 
@@ -72,7 +72,8 @@
 								{{ form.address.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								{{ form.address(class="form-control-plaintext", value=park.address, readonly=true) }}
+								<p class="is-active [ m-0 ]"><a href="https://www.google.com/maps/place/{{ park.address|replace(' ', '+')}}" target="_blank">{{ park.address }}</a></p>
+								{{ form.address(class="form-control-plaintext d-none", value=park.address, readonly=true) }}
 							</div>
 						</li>
 
@@ -94,7 +95,7 @@
 
 		<section id="section--exhibitions">
 			<div class="[ row justify-content-center py-4 ]">
-				<div class="[ col-sm-12 col-md-8 ]">
+				<div class="[ col-md-8 ]">
 					<h2 class="[ display-4 py-4 ]">Exhibitions</h2>
 
 					<div class="[ row justify-content-center ]">
@@ -141,7 +142,7 @@
 
 		<section id="section--submit">
 			<div class="[ row justify-content-center d-none ]">
-				<div class="[ col-sm-12 col-md-8 text-right py-4 ]">
+				<div class="[ col-md-8 text-right py-4 ]">
 					<button id="js-cancel_park" class="butt butt--delete js-cancel-form" type="button">Cancel</button>
 					<button id="js-post_park" class="butt butt--add js-update-form [ ml-2 ]" value="Create" type="button">Update</button>
 				</div>
@@ -182,8 +183,7 @@
 </script>
 
 
-<script src="{{ url_for('static', filename='js/create-org.js') }}"></script>
-<script src="{{ url_for('static', filename='js/park.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dist/park.bundle.js') }}"></script>
 
 
 {% endblock %}
