--- a/app/templates/artwork.html
+++ b/app/templates/artwork.html
@@ -209,7 +209,8 @@
 </script>
 
 
-<script src="{{ url_for('static', filename='js/create-org.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dist/commons.bundle.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dist/artwork.bundle.js') }}"></script>
 
 
 {% endblock %}
