--- a/app/templates/park.html
+++ b/app/templates/park.html
@@ -183,7 +183,7 @@
 </script>
 
 
+<script src="{{ url_for('static', filename='js/dist/commons.bundle.js') }}"></script>
 <script src="{{ url_for('static', filename='js/dist/park.bundle.js') }}"></script>
-
 
 {% endblock %}
