--- a/app/templates/artists.html
+++ b/app/templates/artists.html
@@ -23,7 +23,7 @@
 				{% for artist in artists %}
 
 					<h2 class="[ pt-3 ]"><a href="{{ url_for('artist', artist_id=artist.id) }}">{{ artist.name }}</a></h2>
-					<ul class="[ p-0 ]">
+					<ul class="[ list-unstyled p-0 ]">
 						<li>Artworks:
 							<ul>
 
