--- a/app/templates/artwork.html
+++ b/app/templates/artwork.html
@@ -11,7 +11,7 @@
 	<section id="section--head">
 		{% include "include/nav.html" %}
 		<div class="head [ row justify-content-center align-items-center ]">
-			<div class="[ col-sm-12 col-md-8 ]">
+			<div class="[ col-md-8 ]">
 				<h1 class="[ text-center display-3 ]"><b>{{ artwork.name|upper }}</b></h1>
 			</div>
 		</div>
@@ -24,7 +24,7 @@
 		{{ form.csrf_token }}
 
 		<div class="[ row justify-content-center ]">
-			<div class="[ col-sm-12 col-md-8 text-right pt-5 pb-4 ]">
+			<div class="[ col-md-8 text-right py-4 ]">
 				<button id="js-edit_artwork" class="js-form-edit butt butt--edit" type="button">Edit</button>
 				<a href="{{ url_for('artwork_delete', artwork_id=artwork.id) }}" class="butt butt--delete [ btn btn-sm ]" role="button">Delete</a>
 			</div>
@@ -33,13 +33,13 @@
 
 
 		<section id="section--bio">
-			<div class="row justify-content-center">
-				<div class="col-sm-12 col-md-8">
+			<div class="[ row justify-content-center d-none ]">
+				<div class="[ col-md-8 ]">
 					<h2 class="[ display-4 py-4 ]">Bio</h2>
 
 					<ul class="js-ul_artwork [ p-0 ]">
 
-						<li class="[ row mb-3 d-none align-items-baseline ]">
+						<li class="[ row mb-3 align-items-baseline ]">
 							<div class="[ col-md-3 ]">
 								{{ form.name.label }}
 							</div>
@@ -58,7 +58,7 @@
 
 		<section id="section--artists">
 			<div class="[ row justify-content-center py-4 ]">
-				<div class="[ col-sm-12 col-md-8 ]">
+				<div class="[ col-md-8 ]">
 					<h2 class="[ display-4 py-4 ]">Artists</h2>
 
 					<div class="[ row justify-content-center ]">
@@ -105,7 +105,7 @@
 
 		<section id="section--exhibitions">
 			<div class="[ row justify-content-center py-4 ]">
-				<div class="[ col-sm-12 col-md-8 ]">
+				<div class="[ col-md-8 ]">
 					<h2 class="[ display-4 py-4 ]">Exhibitions</h2>
 
 					<div class="[ row justify-content-center ]">
@@ -152,7 +152,7 @@
 
 		<section id="section--submit">
 			<div class="[ row justify-content-center d-none ]">
-				<div class="[ col-sm-12 col-md-8 text-right py-4 ]">
+				<div class="[ col-md-8 text-right py-4 ]">
 					<button id="js-cancel_artwork" class="butt butt--delete js-cancel-form" type="button">Cancel</button>
 					<button id="js-post_artwork" class="butt butt--add js-update-form [ ml-2 ]" value="Create" type="button">Update</button>
 				</div>
@@ -185,12 +185,22 @@
 		<div class="[ col-md-3 ]">
 			<label for="exhibitions">Exhibition</label>
 		</div>
-		<div class="[ col-md-6 ]">
+		<div class="[ col-10 col-md-6 mb-1 ]">
 			<input id="js-datalist_exhibition" type="text" name="exhibitions" list="exhibitions" data-value="" value="" placeholder="Exhibition Name" class="js-datalist-child js-datalist_exhibition [ form-control ]">
 			{{ datalist("exhibitions", exhibitions) }}
 		</div>
-		<div class="[ col-md-2 ]">
-			<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
+		<div class="[ col-2 col-md-3 align-items-baseline ]">
+			<span class="[ px-2 ]">@</span>
+		</div>
+		<div class="[ col-md-3 ]">
+			<label for="parks">Park</label>
+		</div>
+		<div class="[ col-10 col-md-6 ]">
+			<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control ]">
+			{{ datalist("parks", parks) }}
+		</div>
+		<div class="[ col-2 col-md-3 align-items-baseline ]">
+			<button class="js-delete-li butt butt--delete-icon [ px-2 ]" type="button"><i class="far fa-times-circle"></i></button>
 		</div>
 	</li>
 </script>
