--- a/app/templates/artworks.html
+++ b/app/templates/artworks.html
@@ -23,7 +23,7 @@
 				{% for artwork in artworks %}
 
 					<h2 class="[ pt-3 ]"><a href="{{ url_for('artwork', artwork_id=artwork.id) }}">{{ artwork.name }}</a></h2>
-					<ul class="[ p-0 ]">
+					<ul class="[ list-unstyled p-0 ]">
 						<li>Artists:
 							<ul>
 
