--- a/app/templates/exhibitions.html
+++ b/app/templates/exhibitions.html
@@ -23,7 +23,7 @@
 				{% for exhibition in exhibitions %}
 
 					<h2 class="[ display-4 pt-3 ]"><a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}">{{ exhibition.name }}</a></h2>
-					<ul class="[ p-0 ]">
+					<ul class="[ list-unstyled p-0 ]">
 						<li>Exhibition Dates: {{ exhibition.start_date|date_format }} to {{ exhibition.end_date|date_format }}</li>
 						<li>Install Date(s): {{ exhibition.install_start|date_format }}{%if exhibition.install_end %} to {{ exhibition.install_end|date_format }}{% endif %}</li>
 						<li>De-Install Due Date: {{ exhibition.deinstall_date|date_format }}</li>
