Add webpack bundle.js src refs

--- a/app/templates/org.html
+++ b/app/templates/org.html
@@ -168,9 +168,9 @@
 </script>
 
 
-<script src="{{ url_for('static', filename='js/create-org.js') }}">
-	// controller.selectActiveObject('org');
-</script>
+<!-- <script src="{{ url_for('static', filename='js/create-org.js') }}"></script> -->
+<script src="{{ url_for('static', filename='js/dist/commons.bundle.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dist/org.bundle.js') }}"></script>
 
 
 {% endblock %}
