--- a/app/templates/orgs.html
+++ b/app/templates/orgs.html
@@ -23,7 +23,7 @@
 				{% for org in orgs %}
 
 					<h2 class="[ pt-3 ]"><a href="{{ url_for('org', organization_id=org.id) }}">{{ org.name }}</a></h2>
-					<ul class="[ p-0 ]">
+					<ul class="[ list-unstyled p-0 ]">
 						<li>Website: {{ org.website }}</li>
 						<li>Phone: {{ org.phone }}</li>
 					</ul>
