--- a/app/templates/exhibition.html
+++ b/app/templates/exhibition.html
@@ -146,7 +146,7 @@
 									<label for="artworks">Artwork</label>
 								</div>
 								<div class="[ col-10 col-md-6 mb-1 ]">
-									<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="{{ x.artw.id }}" value="{{ x.artw.name }}" class="js-datalist-child js-datalist_artwork [ form-control ]">
+									<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="{{ x.artw.id }}" value="{{ x.artw.name }}" class="js-datalist-child js-datalist_artwork [ form-control-plaintext ]">
 									{{ datalist("artworks", artworks) }}
 								</div>
 								<div class="[ col-2 col-md-3 align-items-baseline ]">
@@ -157,11 +157,11 @@
 									<label for="artworks">Park</label>
 								</div>
 								<div class="[ col-10 col-md-6 ]">
-									<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="{{ x.nycpark.id }}" value="{{ x.nycpark.name }}" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control ]">
+									<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="{{ x.nycpark.id }}" value="{{ x.nycpark.name }}" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control-plaintext ]">
 									{{ datalist("parks", parks) }}
 								</div>
 								<div class="[ col-2 col-md-3 ]">
-									<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
+									<button class="js-delete-li butt butt--delete-icon [ px-2 ]" type="button"><i class="far fa-times-circle"></i></button>
 								</div>
 							</li>
 
