--- a/app/templates/artwork.html
+++ b/app/templates/artwork.html
@@ -114,31 +114,36 @@
 						</div>
 					</div>
 
-					<ul class="js-ul-child js-ul_exhibitions [ p-0 ]">
+					<ul class="js-ul-child js-ul_exhibitions [ list-unstyled p-0 ]">
 
 						{% for exhibition in artwork.exhibitions %}
-							<li class="artwork__li--artworks [ row mb-3 align-items-baseline ]">
 
+							<li class="js-li_exhibition [ row mb-3 align-items-baseline ]">
 								<div class="[ col-md-3 ]">
-									<label for="art_name">Exhibition</label>
+									<label for="exhibitions">Exhibition</label>
 								</div>
-
-
-								<div class="[ col-md-6 ]">
-									<a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}" class="[ d-inline ]">{{ exhibition.name }}</a>
-
-									<input id="js-datalist_exhibition" type="text" name="exhibitions" list="exhibitions" data-value="{{ exhibition.id }}" value="{{ exhibition.name }}" class="js-datalist-child js-datalist_exhibition [ form-control-plaintext d-none ]" readonly>
-									<!-- Call datalist macro function -->
+								<div class="[ col-10 col-md-6 mb-1 ]">
+									<input id="js-datalist_exhibition" type="text" name="exhibitions" list="exhibitions" data-value="{{ exhibition.id }}" value="{{ exhibition.name }}" placeholder="Exhibition Name" class="js-datalist-child js-datalist_exhibition [ form-control ]">
 									{{ datalist("exhibitions", exhibitions) }}
 								</div>
-								<div class="[ col-md-2 ]">
-									<button class="js-delete-li butt butt--delete-icon [ d-none ]" type="button"><i class="far fa-times-circle"></i></button>
+								<div class="[ col-2 col-md-3 align-items-baseline ]">
+									<span class="[ px-2 ]">@</span>
 								</div>
-
+								<div class="[ col-md-3 ]">
+									<label for="parks">Park</label>
+								</div>
+								<div class="[ col-10 col-md-6 ]">
+									<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control ]">
+									{{ datalist("parks", parks) }}
+								</div>
+								<div class="[ col-2 col-md-3 align-items-baseline ]">
+									<button class="js-delete-li butt butt--delete-icon [ px-2 ]" type="button"><i class="far fa-times-circle"></i></button>
+								</div>
 							</li>
+
 					{% else %}
 
-						<p><i>There are no exhibitions connected with {{ artwork.name }}.</i></p>
+						<li><i>There are no exhibitions connected with {{ artwork.name }}.</i></li>
 
 					{% endfor %}
 
