--- a/app/templates/org.html
+++ b/app/templates/org.html
@@ -54,7 +54,7 @@
 								{{ form.website.label }}
 							</div>
 							<div class="[ col-md-6 ]">
-								<a href="http://{{ org.website }}" class="[ d-inline ]" target="_blank">{{ org.website }}</a>
+								<a href="http://{{ org.website }}" class="is-active" target="_blank">{{ org.website }}</a>
 								{{ form.website(class="form-control-plaintext d-none", value=org.website) }}
 							</div>
 						</li>
@@ -99,7 +99,7 @@
 
 
 								<div class="[ col-10 col-md-6 ]">
-									<a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}" class="[ d-inline ]">{{ exhibition.name }}</a>
+									<a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}" class="is-active">{{ exhibition.name }}</a>
 
 									<input id="js-datalist_exhibition" type="text" name="exhibitions" list="exhibitions" data-value="{{ exhibition.id }}" value="{{ exhibition.name }}" class="js-datalist-child js-datalist_exhibition [ form-control-plaintext d-none ]" readonly>
 									<!-- Call datalist macro function -->
