Add .is-active to section-parks

--- a/app/templates/exhibition.html
+++ b/app/templates/exhibition.html
@@ -82,7 +82,7 @@
 
 
 		<section id="section--parks">
-			<div class="[ row justify-content-center ]">
+			<div class="is-active [ row justify-content-center ]">
 				<div class="[ col-sm-12 col-md-8 ]">
 					<h2 class="[ display-4 py-4 ]">Parks</h2>
 
